--- a/Instrument2/src/app/inst-detail/inst-detail.component.html
+++ b/Instrument2/src/app/inst-detail/inst-detail.component.html
@@ -1,5 +1,5 @@
 <div>
     {{TheInst.color}}  {{TheInst.type}}  {{TheInst.year}}
-</div>
+    <button (click)="deleteMe()">Delete</button><br>
+</div><br>
 
-<button (click)="deleteMe()">Delete</button>
