--- a/BusinessFront/src/app/app.component.html
+++ b/BusinessFront/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>Employees App</h1>
 
-<button (click)="callApi()">Call API</button>
+<button (click)="callApi()">Call Deck API</button><br>
+<button (click)="getDepartments()">Get Departments </button>
+
+<app-department-list></app-department-list>
+
