--- a/BusinessFront/src/app/app.component.html
+++ b/BusinessFront/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1>Employees App</h1>
 
+<app-employee-list></app-employee-list>
+
 <button (click)="callApi()">Call Deck API</button><br>
 <button (click)="getDepartments()">Get Departments </button>
 
