--- a/BusinessFront/src/app/employee-list/employee-list.component.html
+++ b/BusinessFront/src/app/employee-list/employee-list.component.html
@@ -7,8 +7,9 @@
         Email: <input type="text" [(ngModel)]="newemail"><br>
         Department: <input type="text" [(ngModel)]="newdepartment"><br>
         Hire Date: <input type="date" [(ngModel)]="newHireDate"><br>
+        <button (click)="saveNew()">Save</button>
     </div>
     <ng-container *ngFor="let emp of TheList">    
-                <app-employee-detail [employee] ="emp" (delete)="deleteOne($event)"></app-employee-detail>
+                <app-employee-detail [employee] ="emp" (delete)="deleteOne($event)" (update)="updateOne($event)"></app-employee-detail>
         </ng-container>
 </div>
